--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/ssr": "^17.0.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "swiper": "^11.0.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
